--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,5 +4,14 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
-  "postCreateCommand": "direnv allow; bazel run tools:bazel_env || true"
+  "mounts": [
+    "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
+  ],
+  "features": {
+    "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
+      "enableNonRootDocker": "true"
+    }
+  },
+  "postCreateCommand": "direnv allow; bazel run tools:bazel_env || true",
+  "remoteUser": "vscode"
 }
