--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,7 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
+  "privileged": "true",
   "containerEnv": {
     "GITHUB_TOKEN": "${localEnv:GITHUB_TOKEN}",
     "GITHUB_USER": "${localEnv:GITHUB_USER}"
