chore(deps): update libraries

--- a/tools/lint/BUILD
+++ b/tools/lint/BUILD
@@ -1,3 +1,5 @@
+load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
+
 """Definition of linter tools
 
 This is in its own package because it has so many loading-time symbols,
@@ -40,4 +42,18 @@ nogo(
     name = "nogo",
     visibility = ["//visibility:public"],
     deps = TOOLS_NOGO,
+)
+
+bzl_library(
+    name = "linters",
+    srcs = ["linters.bzl"],
+    deps = [
+        "@aspect_rules_lint//lint:clang_tidy",
+        "@aspect_rules_lint//lint:eslint",
+        "@aspect_rules_lint//lint:ktlint",
+        "@aspect_rules_lint//lint:lint_test",
+        "@aspect_rules_lint//lint:pmd",
+        "@aspect_rules_lint//lint:ruff",
+        "@aspect_rules_lint//lint:shellcheck",
+    ],
 )
