--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "scaffold-test-4303",
   "private": true,
   "devDependencies": {
-    "@eslint/js": "^9",
-    "eslint": "^9",
-    "typescript-eslint": "^8",
+    "@eslint/js": "^9.37.0",
+    "eslint": "^9.37.0",
+    "prettier": "^3.6.2",
     "typescript": "5.9.3",
-    "prettier": "^3"
+    "typescript-eslint": "^8.45.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": []
